# ghst

./: LICENSE  README.md  pyproject.toml
src/ghst/: __init__.py  app.py  github_client.py
